2000-12-29  Andrew G. Tereschenko  <tag@ibis.odessa.ua>

	* src/ast.h:
	* src/control.cpp:
	* src/depend.cpp:
	* src/dump.cpp:
	* src/jikesapi.cpp:
	* src/option.cpp:
	* src/platform.cpp:
	* src/symbol.cpp:
	* src/system.cpp:
	* src/unparse.cpp:
	* src/zip.cpp: Removed extra :: qualifiers from
	in front of method and type names.

2000-12-29  Mo DeJong  <mdejong@redhat.com>

	* src/platform.cpp: Fix minor typo in comment. No
	functional changes made.

2000-12-29  Diane Holt  <holtdl@yahoo.com>

	* src/error.cpp (SemanticError::PrintPACKAGE_NOT_FOUND):
	Change format of error message printed when a package
	can not be found. Print the name of the package once
	and then print each of the paths in the classpath.

2000-12-26  Mo DeJong  <mdejong@redhat.com>

	* src/incrmnt.cpp (Control::IncrementalRecompilation):
	Use char instead of u1 as the argument passed to
	the cin.get() method.

2000-12-20  Mo DeJong  <mdejong@redhat.com>

	* src/m4/ac_cxx_check_set_new_handler.m4:
	* src/m4/ac_cxx_namespaces.m4: Use
	HAVE_NAMESPACES not HAVE_NAMESPACE.

2000-12-20  Mo DeJong  <mdejong@redhat.com>

	* Makefile.am: Add RPM spec file to
	`make dist` target.
	* TODO: Mark TODO items fixed.
	* src/Makefile.am: Add java.g
	file to `make dist` target. Fix
	up efence target.

2000-12-20  Mo DeJong  <mdejong@redhat.com>

	* HACKING: Add new file that gives
	users a bit more hacking info.
	* INSTALL: Fix problems with CXXFLAGS
	and more autotools notes to HACKING.
	* README: Touch up minor errors,
	mention the HACKING file.
	* TODO: Update the TODO list with
	a number of issues TDB in 1.13.

2000-12-19  Mo DeJong  <mdejong@redhat.com>

	* autogen.sh: Pass the --ignore-deps
	flag to automake. We don't want to
	use depcomp, it breaks in too many
	places.
	* config.guess:
	* config.sub: Update guess and sub
	platform detection files.
	* configure.in:
	* jikes.spec: Set version to 1.13.
	* src/depcomp: Remove depcomp, now
	that we pass --ignore-deps to automake,
	it is no longer needed.
